deploy/overlays/dev/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mob-api
  namespace: mob
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: mob-api
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
