deploy/overlays/dev/patches/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mob-api
  namespace: mob
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: mob
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30432
      protocol: TCP
